History
=======

0.2.0 (unreleased)
------------------
* fix: missing OL/LI number.
* add: link-target click guard.
* add: iPhone/iPad swipe feature.
* add: navigation layer for smartphone and mouse.
* add: resize view-port when browser window size are changed.
* add: page jump by url hash (#id)

0.1.3 (2011/7/6)
------------------
* fix: namespace package declaration missing, thank you togakushi!

0.1.2 (2011/2/18)
------------------
* include example (docs directory) again.

0.1.1 (2011/2/12)
------------------
* add sample output

0.1.0 (2011/2/6)
-----------------
* first release
