@@ -9,6 +9,7 @@ History
 * add: navigation layer for smartphone and mouse.
 * add: resize view-port when browser window size are changed.
 * add: page jump by url hash (#id)
+* remove: save and load last displaying page by cookie (please use url hash).
 
 0.1.3 (2011/7/6)
 ------------------
